--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "i": "^0.3.7",
+    "moment": "^2.30.1",
     "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
