--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
+    "react-big-calendar": "^1.15.0"
   }
 }
