--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,11 @@ __pycache__/
 # Django migrations
 */migrations/*
 !*/migrations/__init__.py
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
+**/**/migrations
+
 
 # environment variables
 .env
