--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.21.2",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "i": "^0.3.7",
     "moment": "^2.30.1",
