--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "i": "^0.3.7",
+    "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "npm": "^10.9.0",
     "react": "^18.3.1",
@@ -21,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
