--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
     "i": "^0.3.7",
+    "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "npm": "^10.9.0",
