--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.13",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "webpack": "^5.97.0"
   }
 }
