--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
     "axios": "^1.7.7",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
-    "react-big-calendar": "^1.15.0"
+    "react-big-calendar": "^1.15.0",
+    "react-router-dom": "^7.1.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.3"
   }
 }
