--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,10 @@
     "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "npm": "^10.9.0",
     "react": "^18.3.1",
-    "react-big-calendar": "^1.15.0",
+    "react-big-calendar": "^1.17.1",
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
