--- a/MySchoolApp/app.json
+++ b/MySchoolApp/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "schoolapp",
-    "slug": "schoolapp",
+    "name": "MySchoolApp",
+    "slug": "MySchoolApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
