--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "react-to-print": "^3.0.5",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.13.3",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
