--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.21.2",
-    "axios": "^1.7.7",
+    "axios": "^1.8.3",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "html2canvas": "^1.4.1",
@@ -22,11 +22,12 @@
     "moment-timezone": "^0.5.47",
     "npm": "^10.9.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.17.1",
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
