--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@babel/preset-react": "^7.25.9",
     "@headlessui/react": "^2.2.0",
@@ -23,17 +24,16 @@
     "moment-timezone": "^0.5.47",
     "nepali-datepicker-reactjs": "^1.1.7",
     "npm": "^10.9.0",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.17.1",
     "react-csv": "^2.2.2",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "react-scripts": "^5.0.1",
     "react-to-print": "^3.0.5",
     "react-toastify": "^11.0.5",
     "recharts": "^2.13.3",
@@ -43,10 +43,10 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -67,7 +67,17 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.13",
-    "webpack": "^5.97.0"
+    "vite": "^6.2.0"
   }
 }
